# number_our_days

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
documentation/: requirements.txt
src/number_our_days/: __init__.py  cli.py
