 [tool.poetry]
 name = "number_our_days"
 version = "0.1.0"
 description = "Generate a one-page PDF life calendar with ISO week logic."
 authors = ["James Medlin <jmedlin@westervelt.com>"]
 readme = "README.md"
 package-mode = true

 [tool.poetry.dependencies]
 python = "^3.11"
 reportlab = "^4.2.2"

 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
 pytest-mock = "^3.14.0"
 pytest-cov = "^6.0.0"
 pre-commit = "^4.0.1"
 pre-commit-hooks = "^5.0.0"
 isort = "^5.13.2"
 autoflake = "^2.3.1"
 flake8 = "^7.1.1"
 pyupgrade = "^3.19.1"
 black = "^24.10.0"
 vulture = "^2.14"
 rich = "^13.7.1"

 [tool.poetry.scripts]
 number-our-days = "number_our_days.cli:main"

 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"

 [tool.black]
 line-length = 115

 [tool.isort]
 profile = "black"

 [tool.pytest.ini_options]
 log_file = "tests/test.log"
 log_file_level = "DEBUG"
 log_file_format = "[%(asctime)s] %(levelname)s: %(message)s"
 log_file_date_format = "%H:%M:%S"

 [tool.vulture]
 paths = ["src/number_our_days"]
 sort_by_size = false
 verbose = false
